Made properties dynamic (control); updated UI

--- a/src/shuttle-send.html
+++ b/src/shuttle-send.html
@@ -3524,7 +3524,7 @@ function create_fragment(ctx) {
 RED.nodes.registerType("shuttle-send", {
 	name: { value: "shuttle-send" },
 	category: "Runtime",
-	color: "#D9A6AB",
+	color: "#90CAFF",
 	defaults: {
 		name: { value: "", label: "Name" },
 		sendTo: { value: { __PARENT__: true } },
