--- a/src/shuttle-receive.html
+++ b/src/shuttle-receive.html
@@ -3375,7 +3375,7 @@ function create_fragment(ctx) {
 RED.nodes.registerType("shuttle-receive", {
 	name: { value: "shuttle-receive" },
 	category: "Runtime",
-	color: "#D9A6AB",
+	color: "#90CAFF",
 	defaults: {
 		name: { value: "", label: "Name" },
 		listenTo: { value: { __PARENT__: true } }
